logs-macos-regress/latest_build/rcl_yaml_param_parser/stdout.log
Not searching for unused variables given on the command line.
-- The C compiler identification is AppleClang 17.0.0.17000013
-- The CXX compiler identification is AppleClang 17.0.0.17000013
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake_ros: 0.15.6 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_cmake_ros/cmake)
-- Found rcutils: 7.0.7 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rcutils/cmake)
-- Found rmw: 7.9.1 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rmw/cmake)
-- Found libyaml_vendor: 1.8.0 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/libyaml_vendor/cmake)
-- Checking for module 'yaml-0.1'
--   Found yaml-0.1, version 0.2.5
-- Found yaml: 1
-- Found ament_lint_auto: 0.20.3 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_lint_auto/cmake)
-- Found gtest sources under '/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/src/gtest_vendor': C++ tests using 'Google Test' will be built
-- Found Threads: TRUE
-- Performance tests are disabled by default, so Google Benchmark tests will be skipped. To enable these tests, set the CMake variable 'AMENT_RUN_PERFORMANCE_TESTS'.
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include;$<BUILD_INTERFACE:/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (2.9s)
-- Generating done (0.1s)
-- Build files have been written to: /Users/runner/work/pixi_rosdistro/pixi_rosdistro/build/rcl_yaml_param_parser
[1/32] Generating rcl_yaml_param_parser/version.h
[2/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/add_to_arrays.c.o
[3/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/namespace.c.o
[4/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/node_params.c.o
[5/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o
FAILED: [code=1] CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o 
sccache /usr/bin/cc -DRCL_YAML_PARAM_PARSER_BUILDING_DLL -DRCUTILS_ENABLE_FAULT_INJECTION -DROS_PACKAGE_NAME=\"rcl_yaml_param_parser\" -Drcl_yaml_param_parser_EXPORTS -I/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/include -I/Users/runner/work/pixi_rosdistro/pixi_rosdistro/build/rcl_yaml_param_parser/ament_generate_version_header/rcl_yaml_param_parser -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcutils -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rmw -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_dynamic_typesupport -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_runtime_c -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_interface -isystem /opt/homebrew/Cellar/libyaml/0.2.5/include -O3 -DNDEBUG -arch arm64 -fPIC -fvisibility=hidden -Wall -Wextra -Wpedantic -Wformat=2 -Wconversion -Wsign-conversion -MD -MT CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o -MF CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o.d -o CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o -c /Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:885:1: error: function definition is not allowed here
  885 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:942:1: error: function definition is not allowed here
  942 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:1084:1: error: function definition is not allowed here
 1084 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:1249:1: error: function definition is not allowed here
 1249 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:1313:1: error: function definition is not allowed here
 1313 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:1356:1: error: function definition is not allowed here
 1356 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:1389:2: error: expected '}'
 1389 | }
      |  ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:842:1: note: to match this '{'
  842 | {
      | ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:841:62: warning: unused parameter 'nptr' [-Wunused-parameter]
  841 | static double strtod_locale_independent(const char *restrict nptr, char **restrict endptr)
      |                                                              ^
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:841:84: warning: unused parameter 'endptr' [-Wunused-parameter]
  841 | static double strtod_locale_independent(const char *restrict nptr, char **restrict endptr)
      |                                                                                    ^
2 warnings and 7 errors generated.
ninja: build stopped: subcommand failed.
